# be-petmed

./: .env.example  .gitignore  Dockerfile  Dockerfile.lambda  apprunner.yaml  docker-compose.yml  pyproject.toml  requirements-lambda.txt  requirements.txt
.github/workflows/: deploy.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  conversations.py  documents.py  health.py  queries.py  users.py
app/api/v1/schemas/: admin.py  auth.py  common.py  conversations.py  documents.py  queries.py  users.py
app/core/: __init__.py  admin_auth.py  aws.py  cognito.py  exceptions.py  google.py  logging.py  middleware.py
app/db/: dynamodb.py  pagination.py  types.py
app/models/: entities.py
app/services/: cognito_service.py  embedding_service.py  gemini_service.py  pdf_service.py  pinecone_service.py  rag_service.py  storage_service.py  user_service.py
app/workers/: lambda_handler.py  processing.py  tasks.py
config/: iam-policy.json  local.yaml  prod.yaml
scripts/: create-dynamodb-table.sh  localstack-init.sh
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_entities.py  test_exceptions.py  test_health.py  test_pdf_service.py
